docs/v1.15.0/ar/changelog.mdx
---
title: "سجل التغييرات"
description: "تحديثات المنتج والتحسينات وإصلاحات الأخطاء لـ CrewAI"
icon: "clock"
mode: "wide"
---
<Update label="25 يونيو 2026">
  ## v1.15.0

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.15.0)

  ## ما الذي تغير

  ### الميزات
  - تتبع استخدام تدفق المحادثات في التليمتري
  - دعم تدفقات المحادثات في واجهة سطر الأوامر TUI
  - إضافة تحميل تدفق موحد بالإعلان
  - إضافة دعم تدفق CLI بالإعلان
  - إضافة تعبير "if" اختياري إلى خطوات each.do
  - إضافة إجراء عميل فردي إلى تعريفات التدفق
  - إضافة إجراءات الطاقم إلى تعريف التدفق
  - إضافة تحميل تعريف الطاقم داخل السطر
  - إضافة إجراء مركب `each` إلى تعريف التدفق
  - تنفيذ دعم وضع DMN في إنشاء الطاقم وتنفيذه

  ### إصلاحات الأخطاء
  - إصلاح تطبيق أذونات المالك فقط على ملفات الاعتماد
  - إصلاح مدخلات بدء حالة تدفق مخطط JSON
  - إصلاح تجاوز مسار الرابط الرمزي في استخراج أرشيف المهارة
  - تجميع استخدام الرموز عبر جميع مكالمات LLM
  - إزالة أداة Exa المكررة
  - حل مشاكل الطاقم JSON
  - إصلاح معالجة الطاقم JSON وتعزيز وظيفة إعادة تعيين الذاكرة

  ### الوثائق
  - تحديث وثائق التثبيت والبدء السريع لمشاريع الطاقم التي تعتمد على JSON
  - إضافة دليل تكامل Datadog مع لوحة عمليات قابلة للاستيراد
  - إضافة صفحة استوديو "بطاقة واحدة لكل خطوة"
  - إضافة لقطات وتغييرات للإصدارات السابقة التي تؤدي إلى v1.15.0

  ### الأداء
  - تحسين تجربة بدء تشغيل crewai run
  - الحفاظ على تقدم طريقة التدفق مرئيًا للطاقم المتداخل

  ### إعادة الهيكلة
  - إزالة `StateProxy` من الوصول إلى حالة التدفق
  - دمج `crewai run` و `crewai flow kickoff`
  - تمييز أنواع حالة تعريف التدفق
  - توصيل التكوين والاستمرارية من تعريف التدفق إلى وقت التشغيل

  ## المساهمون

  @gabemilani, @github-code-quality[bot], @greysonlalonde, @iris-clawd, @jessemiller, @joaomdmoura, @lorenzejay, @lucasgomide, @theCyberTech, @vinibrsl

</Update>

<Update label="24 يونيو 2026">
  ## v1.14.8a5

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.8a5)

  ## ما الذي تغير

  ### الميزات
  - جعل المراجع التصريحية تعمل عبر التدفقات والفرق (#6326)

  ### إصلاحات الأخطاء
  - إصلاح مدخلات بدء حالة تدفق مخطط JSON (#6325)

  ### الوثائق
  - وضع بطاقة واحدة لكل خطوة تحت استوديو الفريق وإزالة لافتة التوزيع (AGE-107) (#6317)
  - تحديث اللقطة وسجل التغييرات للإصدار v1.14.8a4 (#6319)

  ### إعادة الهيكلة
  - إزالة `StateProxy` من الوصول إلى حالة التدفق (#6327)

  ## المساهمون

  @jessemiller, @vinibrsl

</Update>

<Update label="24 يونيو 2026">
  ## v1.14.8a4

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.8a4)

  ## ما الذي تغير

  ### الميزات
  - دعم تدفقات المحادثة في واجهة سطر الأوامر TUI.

  ### إصلاحات الأخطاء
  - إصلاح مسار التوجيه الرمزي في استخراج أرشيف المهارات.
  - التحقق من صحة مسارات تعريف التدفق الإعلاني.

  ### الوثائق
  - تحديث اللقطة وسجل التغييرات للإصدار v1.14.8a3.

  ## المساهمون

  @lorenzejay, @theCyberTech, @vinibrsl

</Update>

<Update label="23 يونيو 2026">
  ## v1.14.8a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.8a3)

  ## ما الذي تغير

  ### الميزات
  - إضافة تحميل تدفق موحد إعلاني
  - تحسين تجربة بدء تشغيل crewai run
  - دمج `crewai run` و `crewai flow kickoff`
  - الحفاظ على تقدم طريقة التدفق مرئيًا للفرق المتداخلة
  - إضافة دعم واجهة سطر الأوامر الإعلانية للتدفق
  - السماح باستخدام `@router()` كطريقة بدء لتدفق
  - إضافة مخططات مخرجات مكتوبة لأدوات CrewAI

  ### إصلاحات الأخطاء
  - تثبيت opentelemetry على ~=1.42.0

  ### الوثائق
  - إضافة صفحة استوديو "بطاقة واحدة لكل خطوة"

  ## المساهمون

  @jessemiller, @joaomdmoura, @lucasgomide, @vinibrsl

</Update>

<Update label="18 يونيو 2026">
  ## v1.14.8a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.8a2)

  ## ما الذي تغير

  ### الميزات
  - إضافة إجراء عميل واحد إلى تعريفات التدفق
  - التحقق من تعبيرات CEL للتدفق عند تحميل التعريف

  ### الوثائق
  - إضافة دليل تكامل Datadog مع لوحة عمليات قابلة للاستيراد
  - تحديث اللقطة وسجل التغييرات للإصدار v1.14.8a1

  ## المساهمون

  @joaomdmoura, @lucasgomide, @vinibrsl

</Update>

<Update label="18 يونيو 2026">
  ## v1.14.8a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.8a1)

  ## ما الذي تغير

  ### الميزات
  - إضافة تعبير if اختياري إلى خطوات each.do

  ### إصلاحات الأخطاء
  - إصلاح مشكلات JSON crew

  ### الوثائق
  - تحديث snapshot و changelog للإصدار v1.14.8a

  ## المساهمون

  @joaomdmoura, @vinibrsl

</Update>

<Update label="17 يونيو 2026">
  ## v1.14.8a

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.8a)

  ## ما الذي تغير

  ### الميزات
  - إضافة إجراء كتلة نصية/كود إلى FlowDefinition
  - إضافة إجراءات الطاقم إلى FlowDefinition
  - إضافة إجراء مركب `each` إلى FlowDefinition
  - تنفيذ دعم وضع DMN في إنشاء الطاقم وتنفيذه
  - تحسين وظيفة إعادة تعيين الذاكرة ومعالجة الطاقم بتنسيق JSON
  - إضافة تعبيرات إلى إجراءات FlowDefinition
  - تنفيذ أدوات تشغيل تعريف التدفق بدون كود Python
  - دفع التغذية الراجعة البشرية من تعريف التدفق
  - توصيل التكوين والاستمرارية من FlowDefinition إلى وقت التشغيل
  - إضافة `crewai run --definition` للتدفقات التصريحية
  - دعم تراجع نشر ZIP وتشغيل مشاريع الطاقم بتنسيق JSON
  - تقديم الطواقم بتنسيق JSON أولاً

  ### إصلاحات الأخطاء
  - إصلاح أداة Exa المكررة
  - إصلاح استخدام الرموز المجمعة عبر جميع استدعاءات LLM
  - حل المشكلات المتعلقة بتحميل الطاقم ومنطق التحقق

  ### الوثائق
  - توثيق حقول FlowDefinition في مخطط JSON
  - تحديث وثائق التثبيت والبدء السريع لمشاريع الطاقم بتنسيق JSON أولاً
  - تحديث سجل التغييرات والإصدار لـ v1.14.7

  ## المساهمون

  @gabemilani, @greysonlalonde, @iris-clawd, @joaomdmoura, @lorenzejay, @lucasgomide, @theCyberTech, @vinibrsl

</Update>

<Update label="11 يونيو 2026">
  ## v1.14.7

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.7)

  ## ما الذي تغير

  ### الميزات
  - إضافة واجهات خلفية افتراضية قابلة للتوصيل للذاكرة، والمعرفة، وrag، وflow.
  - عرض السبب الحقيقي للإنهاء، ومعلمات العينة، وresponse.id في أحداث LLM.
  - تصنيف مشغلات DSL كزخارف واعية للمسار.
  - إضافة واجهة برمجة تطبيقات الدردشة لتدفقات المحادثة.
  - جعل واجهة القفل قابلة للتجاوز.
  - بناء FlowDefinition من بيانات التعريف الخاصة بـ Flow DSL.
  - إضافة مزود LLM من Snowflake Cortex الأصلي.
  - إضافة دعم لملفات الوكلاء المدربين من crew.

  ### إصلاحات الأخطاء
  - إصلاح نقطة التحقق لإعادة بناء BaseLLM مخصص كـ LLM ملموس عند الاستعادة.
  - تقييد الاستعادة على علامة لمنع اللقطات الحية من إعادة التشغيل كاستئناف.
  - تحديد حالة وقت التشغيل لكل تشغيل للحد من النمو وعزل التشغيل المتزامن.
  - إصلاح إعدادات التتبع على crewai-login.
  - احترام suppress_flow_events لأحداث تنفيذ الطريقة.
  - استعادة [project.scripts] في حزمة crewai لتثبيت أداة uv.
  - حل مشكلات CVE الخاصة بـ pip-audit لـ aiohttp وdocling وdocling-core.
  - إصلاح إدخال الملفات الذي لا يعمل بشكل موثوق.
  - إصلاح تاريخ نتائج أدوات Snowflake Claude غير المكتملة.

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.7.
  - تحديث وثائق جامع OpenTelemetry.
  - تحديث دليل NVIDIA Nemotron LLM.
  - إضافة دليل تكامل Databricks.
  - إضافة دليل تكامل Snowflake.

  ### الأداء
  - تحسين سرعة استيراد crewai من خلال تحميل مستندات docling بشكل كسول.

  ### إعادة الهيكلة
  - تبسيط تقييم شروط التدفق ليكون بلا حالة لكل حدث.
  - فصل منطق المحادثة عن وقت التشغيل وإضافة تعريف المحادثة.
  - تقسيم `flow.py` إلى DSL، وتعريف، ووقت تشغيل.

  ## المساهمون

  @Luzk, @alex-clawd, @devin-ai-integration[bot], @greysonlalonde, @gvieira, @jessemiller, @lorenzejay, @lucasgomide, @mattatcha, @vinibrsl

</Update>

<Update label="10 يونيو 2026">
  ## v1.14.7rc2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.7rc2)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - استعادة البوابة على علامة لمنع اللقطات الحية من إعادة التشغيل كاستئناف

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.7rc1

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="10 يونيو 2026">
  ## v1.14.7rc1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.7rc1)

  ## ما الذي تغير

  ### الميزات
  - إضافة `reset_runtime_state` لإطلاق حالة الحافلة المتراكمة
  - التعامل مع دعم كل من الموجهات المخصصة
  - فصل منطق المحادثة عن وقت التشغيل وإضافة `conversational_definition`

  ### إصلاحات الأخطاء
  - إصلاح نطاق حالة وقت التشغيل لكل تشغيل للحد من النمو وعزل التشغيلات المتزامنة
  - إصلاح إعدادات القياس عن بُعد على `crewai-login`
  - إصلاح احترام `suppress_flow_events` لفعاليات تنفيذ الأساليب

  ### الوثائق
  - تحديث صور OpenTelemetry
  - تحديث الوثائق لتعكس الحالة الجديدة لجمع بيانات OpenTelemetry
  - تحديث سجل التغييرات والإصدار لـ v1.14.7a4

  ### إعادة الهيكلة
  - تبسيط تقييم شرط التدفق ليكون بلا حالة لكل حدث
  - تحسين دورة توجيه المحادثة مع تقليل مسار واحد

  ## المساهمون

  @greysonlalonde, @lorenzejay, @lucasgomide, @vinibrsl

</Update>

<Update label="9 يونيو 2026">
  ## v1.14.7a4

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.7a4)

  ## ما الذي تغير

  ### الميزات
  - نقل وقت التشغيل @listen/@router لقراءة من FlowDefinition
  - إضافة واجهات خلفية افتراضية قابلة للتوصيل للذاكرة، والمعرفة، وrag، وflow

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.7a3

  ## المساهمون

  @greysonlalonde, @mattatcha, @vinibrsl

</Update>

<Update label="8 يونيو 2026">
  ## v1.14.7a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.7a3)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح تعرض `ask_for_human_input` في `AgentExecutor` التجريبي
  - حل مشكلات CVEs الخاصة بـ pip-audit لـ `aiohttp`، `docling`، `docling-core`، و `pip`

  ### إعادة هيكلة
  - نقل `@start` لقراءة من `FlowDefinition`

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.7a2

  ## المساهمون

  @greysonlalonde، @lorenzejay، @vinibrsl

</Update>

<Update label="5 يونيو 2026">
  ## v1.14.7a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.7a2)

  ## ما الذي تغير

  ### الميزات
  - إضافة دعم تتبع تدفقات المحادثة.
  - تحديث وثائق تدفق المحادثة لاستخدام `handle_turn`.
  - عرض السبب الحقيقي لإنهاء المحادثة، ومعلمات العينة، و`response.id` في أحداث LLM.
  - تصنيف مشغلات DSL كزخارف واعية بالمسار.
  - تنفيذ واجهة برمجة التطبيقات للدردشة لتدفقات المحادثة.
  - جعل قفل الخلفية قابلاً للتجاوز في متجر القفل.
  - تقسيم أحادي تدفق DSL إلى وحدات زخرفية مركزة.
  - تسطيح استخدام ذاكرة التخزين المؤقت LiteLLM/أعداد الأسباب الفرعية في `_usage_to_dict`.
  - بناء `FlowDefinition` من بيانات التعريف الخاصة بتدفق DSL.

  ### الوثائق
  - إضافة دليل NVIDIA Nemotron LLM.
  - توثيق عمليات نشر المونوريبو.
  - تحديث سجل التغييرات والإصدار لـ v1.14.7a1.

  ## المساهمون

  @alex-clawd, @gvieira, @lorenzejay, @lucasgomide, @mattatcha, @vinibrsl

</Update>

<Update label="3 يونيو 2026">
  ## v1.14.7a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.7a1)

  ## ما الذي تغير

  ### الميزات
  - إضافة دعم ملفات الوكلاء المدربين
  - إضافة مزود LLM الأصلي لـ Snowflake Cortex
  - إضافة دليل تكامل Databricks
  - إضافة دليل تكامل Snowflake

  ### إصلاحات الأخطاء
  - إصلاح CLI عن طريق استعادة `[project.scripts]` في حزمة crewai لتثبيت أداة UV
  - حل مشكلات موثوقية إدخال الملفات
  - إصلاح تاريخ نتائج الأدوات غير المكتملة في Snowflake Claude
  - التعامل مع استدعاءات الأدوات الممثلة كسلاسل لـ Snowflake Claude
  - إعادة تفعيل مستمعي `or_` متعدد المصادر عبر دورات مدفوعة بالموجه

  ### الأداء
  - تحسين سرعة استيراد crewai عن طريق تحميل استيرادات docling بشكل كسول

  ### إعادة هيكلة
  - تقسيم `flow.py` إلى DSL، تعريف، وتشغيل

  ## المساهمون

  @Luzk, @alex-clawd, @devin-ai-integration[bot], @greysonlalonde, @jessemiller, @lorenzejay, @vinibrsl

</Update>

<Update label="28 مايو 2026">
  ## v1.14.6

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.6)

  ## ما الذي تغير

  ### الميزات
  - تحسين StdioTransport لمنع تسرب متغيرات البيئة
  - تعزيز تكوين التخطيط ومعالجة الملاحظات
  - إعلان env_vars على DatabricksQueryTool
  - إضافة وثائق خطة التحكم في الوكيل

  ### إصلاحات الأخطاء
  - إصلاح تسرب المخرجات المنظمة في حلقات استدعاء الأدوات
  - حذف ردود الاستدعاء غير القابلة للعودة وحالة المحول في نقطة التحقق
  - تسلسل الحقول من النوع [BaseModel] كـ JSON schema في نقطة التحقق
  - تجنب مهمة orphan task_started عند استعادة نطاق الاستئناف
  - السماح لـ AgentExecutor بالاستعادة من نقطة التحقق
  - تصحيح خطأ الكتابة من mongodb إلى pymongo في package_dependencies

  ### الوثائق
  - إضافة كتلة تنقل وثائق ACP (بيتا) إلى صفحات خطة التحكم في الوكيل
  - إزالة المراجع إلى العمليات التوافقية من صفحة العمليات
  - إعادة هيكلة صفحة نقاط التحقق
  - توثيق خطوة تثبيت حزمة الإدارة لمرة واحدة
  - نقل Secrets Manager / Workload Identity من replicated-config
  - إزالة تعبيرات `{" "}` JSX التي تكسر عرض `<Steps>`

  ### إعادة الهيكلة
  - نقل مستودع المهارات إلى experimental + CREWAI_EXPERIMENTAL gate

  ## المساهمون

  @akaKuruma, @alex-clawd, @github-actions[bot], @greysonlalonde, @heitorado, @iris-clawd, @lorenzejay, @lucasgomide, @mattatcha, @thiagomoretto, @vinibrsl

</Update>

<Update label="27 مايو 2026">
  ## v1.14.6a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.6a2)

  ## ما الذي تغير

  ### الميزات
  - تحسين `StdioTransport` لمنع تسرب متغيرات البيئة
  - تحسين تكوين التخطيط ومعالجة المراقبة
  - إعلان `env_vars` على `DatabricksQueryTool`
  - إضافة وثائق خطة التحكم بالوكيل

  ### إصلاحات الأخطاء
  - إصلاح تسرب المخرجات المنظمة في حلقات استدعاء الأدوات
  - حذف الاستدعاءات غير القابلة للعودة وحالة المحول في نقاط التحقق
  - تسلسل حقول `type[BaseModel]` كـ JSON schema في نقاط التحقق
  - تجنب `task_started` اليتيمة عند استعادة نطاق الاستئناف
  - السماح لـ `AgentExecutor` بالاستعادة من نقطة تحقق
  - تصحيح خطأ مطبعي في MongoDB إلى `pymongo` في تبعيات الحزمة

  ### الوثائق
  - إعادة هيكلة صفحة نقاط التحقق
  - توثيق خطوة تثبيت حزمة الإدارة لمرة واحدة
  - نقل Secrets Manager / Workload Identity من replicated-config
  - إزالة إدخال Skills Repository من سجل التغييرات

  ## المساهمون

  @github-actions[bot], @greysonlalonde, @heitorado, @iris-clawd, @lorenzejay, @lucasgomide, @mattatcha, @thiagomoretto, @vinibrsl

</Update>

<Update label="21 مايو 2026">
  ## v1.14.6a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.6a1)

  ## ما الذي تغير

  ### الميزات
  - توليد ملاحظات إصدار مصنفة للمؤسسات

  ### إصلاحات الأخطاء
  - تعزيز تسلسل حالة وقت التشغيل عبر حقول الكيان
  - تحديث idna إلى 3.15 لمعالجة مشكلة الأمان GHSA-65pc-fj4g-8rjx
  - إزالة تعبيرات JSX `{" "}` التي تعطل عرض `<Steps>`

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.5

  ## المساهمون

  @akaKuruma, @alex-clawd, @greysonlalonde

</Update>

<Update label="19 مايو 2026">
  ## v1.14.5

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5)

  ## ما الذي تغير

  ### الميزات
  - إلغاء استخدام `CrewAgentExecutor`، وتعيين وكلاء الطاقم الافتراضيين إلى `AgentExecutor`
  - تحسين أدوات صندوق الرمل Daytona
  - إضافة معلمة بدء `restore_from_state_id`
  - إضافة تسليط الضوء على `ExaSearchTool`، وإعادة تسميته من `EXASearchTool`

  ### إصلاحات الأخطاء
  - إصلاح تسرب الذاكرة في `git.py` باستخدام `cached_property`
  - عرض استدعاءات الأدوات المتدفقة عندما تكون `available_functions` غائبة
  - ضمان تحميل أحداث `skills` للتتبع
  - تصحيح مسار نقطة النهاية للحالة من `/{kickoff_id}/status` إلى `/status/{kickoff_id}`
  - استعادة كتلة الشيفرة المفقودة في دليل التدفق الأول للغة البرتغالية (pt-BR)
  - منع `result_as_answer` من إرجاع رسائل الخطأ أو الكتل المرتبطة كإجابة نهائية
  - الحفاظ على مخرجات المهام عبر تفريغ الدفعات غير المتزامنة
  - دائمًا استعادة `task.output_pydantic` في كتلة finally
  - التعامل مع إدخال `BaseModel` في `convert_to_model`

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.5
  - إضافة دليل ترقية OSS و انتقال الطاقم إلى التدفق
  - توثيق متغيرات البيئة الإضافية لأدوات المطور
  - إضافة وثائق لـ `TavilyGetResearch`

  ### إعادة الهيكلة
  - استخراج واجهة سطر الأوامر إلى حزمة مستقلة `crewai-cli`

  ## المساهمون

  @NIK-TIGER-BILL, @akaKuruma, @cgoeppinger, @github-actions[bot], @greysonlalonde, @heitorado, @irfaan101, @iris-clawd, @lorenzejay, @manisrinivasan2k1, @minasami-pr, @mislavivanda, @theCyberTech, @theishangoswami, @wishhyt

</Update>

<Update label="18 مايو 2026">
  ## v1.14.5a7

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5a7)

  ## ما الذي تغير

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.5a6

  ### تغييرات كسرية
  - إلغاء حقل function_calling_llm

  ## المساهمون

  @greysonlalonde, @heitorado

</Update>

<Update label="15 مايو 2026">
  ## v1.14.5a6

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5a6)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح استدعاءات الأدوات المتدفقة عندما تكون available_functions غائبة
  - رفع اعتماد langsmith إلى الإصدار >=0.8.0 لمعالجة GHSA-3644-q5cj-c5c7
  - حل مشاكل الأماكن الشاغرة لكتل التعليمات البرمجية غير المترجمة في وثائق البرتغالية البرازيلية

  ### الوثائق
  - إضافة وثائق لـ TavilyGetResearch
  - تحديث سجل التغييرات والإصدار لـ v1.14.5a5

  ## المساهمون

  @greysonlalonde, @heitorado, @iris-clawd, @lorenzejay, @manisrinivasan2k1

</Update>

<Update label="13 مايو 2026">
  ## v1.14.5a5

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5a5)

  ## ما الذي تغير

  ### الميزات
  - إلغاء استخدام CrewAgentExecutor، وتعيين وكلاء Crew الافتراضيين إلى AgentExecutor
  - تحسين أدوات صندوق الرمل Daytona

  ### إصلاحات الأخطاء
  - إصلاح كتلة الكود المفقودة في دليل التدفق الأول باللغة البرتغالية (pt-BR)
  - تسجيل أخطاء المراجعة المسبقة والتقطير HITL، إضافة learn_strict
  - تصحيح urllib3 للثغرات الأمنية
  - تصحيح gitpython و langchain-core؛ تجاهل CVE paramiko غير المصححة
  - تحديث جميع حزم مساحة العمل المنشورة على uv lock/sync

  ### الوثائق
  - إضافة دليل ترحيل لـ `inputs.id` إلى `restoreFromStateId`
  - إضافة دليل ترقية OSS ودليل ترحيل crew-to-flow
  - تحديث سجل التغييرات والإصدار لـ v1.14.5a4

  ## المساهمون

  @akaKuruma, @greysonlalonde, @iris-clawd, @lorenzejay, @mislavivanda

</Update>

<Update label="9 مايو 2026">
  ## v1.14.5a4

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5a4)

  ## ما الذي تغير

  ### الميزات
  - تحديث قوائم LLM

  ### إصلاحات الأخطاء
  - إصلاح مشكلة الاعتماد من خلال نقل `textual` إلى `crewai-cli` وإضافة `certifi`

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.5a3

  ## المساهمون

  @cgoeppinger, @greysonlalonde

</Update>

<Update label="7 مايو 2026">
  ## v1.14.5a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5a3)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح مسار نقطة النهاية للحالة من /{kickoff_id}/status إلى /status/{kickoff_id}
  - تحديث تبعية gitpython إلى الإصدار >=3.1.47 للامتثال الأمني

  ### إعادة هيكلة
  - استخراج واجهة سطر الأوامر إلى حزمة crewai-cli المستقلة

  ### الوثائق
  - تحديث سجل التغييرات والإصدار للإصدار v1.14.5a2

  ## المساهمون

  @greysonlalonde, @iris-clawd

</Update>

<Update label="4 مايو 2026">
  ## v1.14.5a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5a2)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح استعادة مخرجات المهام في كتلة finally
  - تضمين `thoughts_token_count` في رموز الإكمال
  - الحفاظ على مخرجات المهام عبر تفريغ دفعات غير متزامنة
  - تمرير kwargs إلى استدعاءات المحمل في `CrewAIRagAdapter`
  - منع `result_as_answer` من إرجاع رسالة كتلة الخطاف كإجابة نهائية
  - منع `result_as_answer` من إرجاع خطأ كإجابة نهائية
  - استخدام `acall` لتحويل المخرجات في المسارات غير المتزامنة
  - منع تغيير كلمات التوقف المشتركة في LLM عبر الوكلاء
  - التعامل مع مدخلات `BaseModel` في `convert_to_model`

  ### الوثائق
  - توثيق متغيرات البيئة الإضافية
  - تحديث سجل التغييرات والإصدار لـ v1.14.5a1

  ## المساهمون

  @NIK-TIGER-BILL, @greysonlalonde, @lorenzejay, @minasami-pr, @theCyberTech, @wishhyt

</Update>

<Update label="1 مايو 2026">
  ## v1.14.5a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.5a1)

  ## ما الذي تغير

  ### الميزات
  - إضافة معلمة بدء `restore_from_state_id`
  - إضافة تسليط الضوء على ExaSearchTool وإعادة تسميته من EXASearchTool

  ### إصلاحات الأخطاء
  - إصلاح المواقع المفقودة لـ crewai في تدفق الإصدار
  - ضمان تحميل أحداث المهارات للآثار

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.4

  ## المساهمون

  @akaKuruma, @github-actions[bot], @greysonlalonde, @lorenzejay, @theishangoswami

</Update>

<Update label="1 مايو 2026">
  ## v1.14.4

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.4)

  ## ما الذي تغير

  ### الميزات
  - إضافة دعم لمفتاح الاستمرارية المخصص في @persist
  - إضافة دعم واجهة برمجة التطبيقات للردود لمزود Azure OpenAI
  - تمرير credential_scopes إلى عميل Azure AI Inference
  - إضافة دليل إعداد هوية عبء العمل لـ Vertex AI
  - إضافة Tavily Research والحصول على Research
  - إضافة أدوات MCP من You.com للبحث، البحث، واستخراج المحتوى

  ### إصلاحات الأخطاء
  - إصلاح مشكلة السقوط عند عدم تطابق تعبير JSON regex مع JSON صالح
  - إصلاح للحفاظ على tool_calls عندما تحتوي الاستجابة أيضًا على نص
  - إصلاح لتمرير base_url و api_key إلى instructor.from_provider
  - إصلاح لتحذير وإرجاع فارغ عندما لا يُرجع خادم MCP الأصلي أي أدوات
  - إصلاح لاستخدام متغير الرسائل الموثقة في معالجات غير البث
  - إصلاح لحماية مساعدي وصف دردشة الطاقم ضد فشل LLM
  - إصلاح لإعادة تعيين الرسائل والتكرارات بين الاستدعاءات
  - إصلاح لتمرير ملف trained-agents من خلال replay و test
  - إصلاح لاحترام ملف trained-agents المخصص في الاستدلال
  - إصلاح لربط الوكلاء المخصصين بالمهام فقط بالطاقم لملفات الإدخال متعددة الأنماط
  - إصلاح لتسلسل callable الحواجز كـ null لتسجيل JSON
  - إصلاح إعادة تسمية force_final_answer لتجنب توجيه ذاتي
  - إصلاح زيادة litellm لإصلاح SSTI؛ تجاهل CVE غير القابل للإصلاح في pip

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.4a1
  - إضافة صفحة أدوات E2B Sandbox
  - إضافة وثائق أدوات صندوق Daytona

  ## المساهمون

  @EdwardIrby, @dependabot[bot], @factory-droid-oss, @factory-droid[bot], @greysonlalonde, @kunalk16, @lorenzejay, @lucasgomide, @manisrinivasan2k1, @mattatcha, @vinibrsl

</Update>

<Update label="29 أبريل 2026">
  ## v1.14.4a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.4a1)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح مساعدي وصف دردشة الطاقم ضد فشل LLM.
  - إعادة تعيين الرسائل والتكرارات بين الاستدعاءات في المنفذ.
  - تمرير ملف الوكلاء المدربين عبر إعادة التشغيل والاختبار في CLI.
  - احترام ملف الوكلاء المدربين المخصص أثناء الاستدلال في الوكيل.
  - ربط الوكلاء المخصصين بالمهام فقط بالطاقم لضمان وصول ملفات الإدخال متعددة الوسائط إلى LLM.
  - تسلسل استدعاءات الحواجز كـ null لتسجيل النقاط في JSON.
  - إعادة تسمية `force_final_answer` في agent_executor لتجنب جهاز التوجيه الذاتي الإشارة.
  - تحديث `litellm` لإصلاح SSTI وتجاهل CVE pip غير القابل للإصلاح.

  ### الوثائق
  - إضافة صفحة أدوات Sandbox E2B.
  - إضافة وثائق أدوات Sandbox Daytona.
  - إضافة دليل إعداد هوية عبء العمل لـ Vertex AI.
  - إضافة أدوات MCP من You.com للبحث، البحث، واستخراج المحتوى.
  - تحديث سجل التغييرات والإصدار لـ v1.14.3.

  ## المساهمون

  @EdwardIrby, @dependabot[bot], @factory-droid-oss, @factory-droid[bot], @greysonlalonde, @lorenzejay, @manisrinivasan2k1, @mattatcha

</Update>

<Update label="25 أبريل 2026">
  ## v1.14.3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.3)

  ## ما الذي تغير

  ### الميزات
  - إضافة أحداث دورة الحياة لعمليات نقطة التحقق
  - إضافة دعم لـ e2b
  - الرجوع إلى DefaultAzureCredential عند عدم توفير مفتاح API في تكامل Azure
  - إضافة دعم Bedrock V4
  - إضافة أدوات Daytona sandbox لوظائف محسّنة
  - إضافة دعم نقطة التحقق والتفرع للوكلاء المستقلين

  ### إصلاحات الأخطاء
  - إصلاح execution_id ليكون منفصلًا عن state.id
  - حل مشكلة إعادة تشغيل أحداث الطريقة المسجلة عند استئناف نقطة التحقق
  - إصلاح تسلسل مراجع class initial_state كـ JSON schema
  - الحفاظ على مهارات الوكلاء التي تحتوي على بيانات وصفية فقط
  - تمرير أسماء @CrewBase الضمنية إلى أحداث الطاقم
  - دمج بيانات التنفيذ عند تهيئة دفعة مكررة
  - إصلاح تسلسل حقول مراجع class Task لنقاط التحقق
  - التعامل مع نتيجة BaseModel في حلقة إعادة المحاولة guardrail
  - الحفاظ على thought_signature في استدعاءات أدوات Gemini للبث
  - إصدار task_started عند استئناف التفرع وإعادة تصميم واجهة المستخدم النصية لنقطة التحقق
  - استخدام تواريخ مستقبلية في اختبارات تقليم نقطة التحقق لمنع الفشل المعتمد على الوقت
  - إصلاح ترتيب التشغيل الجاف والتعامل مع الفرع القديم الذي تم التحقق منه في إصدار أدوات التطوير
  - ترقية lxml إلى >=6.1.0 لرقعة الأمان
  - رفع python-dotenv إلى >=1.2.2 لرقعة الأمان

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.3
  - إضافة صفحة "بناء باستخدام الذكاء الاصطناعي" وتحديث التنقل لجميع اللغات
  - إزالة الأسئلة الشائعة حول التسعير من صفحة البناء باستخدام الذكاء الاصطناعي عبر جميع المواقع

  ### الأداء
  - تحسين MCP SDK وأنواع الأحداث لتقليل بدء التشغيل البارد بنسبة ~29%

  ### إعادة الهيكلة
  - إعادة هيكلة مساعدي نقطة التحقق للقضاء على التكرار وتشديد تلميحات نوع الحالة

  ## المساهمون

  @MatthiasHowellYopp, @akaKuruma, @alex-clawd, @github-actions[bot], @github-advanced-security[bot], @greysonlalonde, @iris-clawd, @lorenzejay, @mattatcha, @renatonitta

</Update>

<Update label="23 أبريل 2026">
  ## v1.14.3a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.3a3)

  ## ما الذي تغير

  ### الميزات
  - إضافة دعم لـ e2b
  - تنفيذ التراجع إلى DefaultAzureCredential عند عدم توفير مفتاح API

  ### إصلاحات الأخطاء
  - ترقية lxml إلى >=6.1.0 لمعالجة مشكلة الأمان GHSA-vfmq-68hx-4jfw

  ### الوثائق
  - إزالة الأسئلة الشائعة حول التسعير من صفحة البناء باستخدام الذكاء الاصطناعي عبر جميع اللغات

  ### الأداء
  - تحسين وقت بدء التشغيل البارد بنسبة ~29% من خلال التحميل الكسول لمجموعة أدوات MCP وأنواع الأحداث

  ## المساهمون

  @alex-clawd, @github-advanced-security[bot], @greysonlalonde, @iris-clawd, @lorenzejay, @mattatcha

</Update>

<Update label="22 أبريل 2026">
  ## v1.14.3a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.3a2)

  ## ما الذي تغير

  ### الميزات
  - إضافة دعم لـ bedrock V4
  - إضافة أدوات Daytona sandbox لوظائف محسّنة
  - إضافة صفحة "البناء باستخدام الذكاء الاصطناعي" — مستندات أصلية للذكاء الاصطناعي لوكلاء البرمجة
  - إضافة "البناء باستخدام الذكاء الاصطناعي" إلى التنقل في صفحة "البدء" وملفات الصفحات لجميع اللغات (en, ko, pt-BR, ar)

  ### إصلاحات الأخطاء
  - إصلاح انتشار أسماء @CrewBase الضمنية إلى أحداث الطاقم
  - حل مشكلة تكرار تهيئة الدفعات في دمج بيانات التنفيذ الوصفية
  - إصلاح تسلسل حقول مرجع فئة Task لعمليات التحقق من النقاط
  - التعامل مع نتيجة BaseModel في حلقة إعادة المحاولة للحدود
  - تحديث python-dotenv إلى الإصدار >=1.2.2 للامتثال الأمني

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.3a1
  - تحديث الأوصاف وتطبيق الترجمات الفعلية

  ## المساهمون

  @MatthiasHowellYopp, @github-actions[bot], @greysonlalonde, @iris-clawd, @lorenzejay, @renatonitta

</Update>

<Update label="21 أبريل 2026">
  ## v1.14.3a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.3a1)

  ## ما الذي تغير

  ### الميزات
  - إضافة دعم نقاط التحقق والفروع لوكلاء مستقلين

  ### إصلاحات الأخطاء
  - الحفاظ على thought_signature في استدعاءات أداة البث Gemini
  - إصدار task_started عند استئناف الفرع وإعادة تصميم واجهة المستخدم النصية لنقاط التحقق
  - تصحيح ترتيب التشغيل الجاف ومعالجة الفرع القديم الذي تم التحقق منه في إصدار أدوات التطوير
  - استخدام تواريخ مستقبلية في اختبارات تقليم نقاط التحقق لمنع الفشل المعتمد على الوقت (#5543)

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.2

  ## المساهمون

  @alex-clawd, @greysonlalonde

</Update>

<Update label="17 أبريل 2026">
  ## v1.14.2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.2)

  ## ما الذي تغير

  ### الميزات
  - إضافة أوامر استئناف النقاط التفتيش، والاختلاف، والتنظيف مع تحسين إمكانية الاكتشاف.
  - إضافة معلمة `from_checkpoint` إلى `Agent.kickoff` والطرق ذات الصلة.
  - إضافة أوامر إدارة القوالب لقوالب المشاريع.
  - إضافة تلميحات استئناف إلى إصدار أدوات المطور عند الفشل.
  - إضافة واجهة سطر الأوامر للتحقق من النشر وتعزيز سهولة استخدام تهيئة LLM.
  - إضافة تقسيم النقاط التفتيشية مع تتبع النسب.
  - إثراء تتبع رموز LLM مع رموز الاستدلال ورموز إنشاء التخزين المؤقت.

  ### إصلاحات الأخطاء
  - إصلاح المطالبة بشأن تعارضات الفروع القديمة في إصدار أدوات المطور.
  - تصحيح الثغرات في `authlib` و `langchain-text-splitters` و `pypdf`.
  - تحديد نطاق معالجات البث لمنع تلوث أجزاء التشغيل المتقاطعة.
  - إرسال نقاط التفتيش عبر واجهات Flow في TUI.
  - استخدام نمط البحث المتكرر لاكتشاف نقاط التفتيش بتنسيق JSON.
  - التعامل مع مخططات JSON الدائرية في أداة حل MCP.
  - الحفاظ على معلمات استدعاء أداة Bedrock من خلال إزالة القيمة الافتراضية الصحيحة.
  - إصدار حدث flow_finished بعد استئناف HITL.
  - إصلاح ثغرات متنوعة من خلال تحديث التبعيات، بما في ذلك `requests` و `cryptography` و `pytest`.
  - إصلاح لإيقاف تمرير وضع صارم إلى واجهة برمجة التطبيقات Bedrock Converse.

  ### الوثائق
  - توثيق المعلمات المفقودة وإضافة قسم النقاط التفتيشية.
  - تحديث سجل التغييرات والإصدار للإصدار v1.14.2 ومرشحي الإصدار السابقين.
  - إضافة توثيق ميزة A2A الخاصة بالشركات وتحديث وثائق A2A المفتوحة المصدر.

  ## المساهمون

  @Yanhu007، @alex-clawd، @github-actions[bot]، @greysonlalonde، @iris-clawd، @lorenzejay، @lucasgomide

</Update>

<Update label="16 أبريل 2026">
  ## v1.14.2rc1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.2rc1)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح معالجة مخططات JSON الدائرية في أداة MCP
  - إصلاح ثغرة أمنية من خلال تحديث python-multipart إلى 0.0.26
  - إصلاح ثغرة أمنية من خلال تحديث pypdf إلى 6.10.1

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.2a5

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="15 أبريل 2026">
  ## v1.14.2a5

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.2a5)

  ## ما الذي تغير

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.2a4

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="15 أبريل 2026">
  ## v1.14.2a4

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.2a4)

  ## ما الذي تغير

  ### الميزات
  - إضافة تلميحات استئناف إلى إصدار أدوات المطورين عند الفشل

  ### إصلاحات الأخطاء
  - إصلاح توجيه وضع الصرامة إلى واجهة برمجة تطبيقات Bedrock Converse
  - إصلاح إصدار pytest إلى 9.0.3 لثغرة الأمان GHSA-6w46-j5rx-g56g
  - رفع الحد الأدنى لـ OpenAI إلى >=2.0.0

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.2a3

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="13 أبريل 2026">
  ## v1.14.2a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.2a3)

  ## ما الذي تغير

  ### الميزات
  - إضافة واجهة سطر الأوامر للتحقق من النشر
  - تحسين سهولة استخدام تهيئة LLM

  ### إصلاحات الأخطاء
  - تجاوز pypdf و uv إلى إصدارات مصححة لـ CVE-2026-40260 و GHSA-pjjw-68hj-v9mw
  - ترقية requests إلى >=2.33.0 لمعالجة ثغرة ملف مؤقت CVE
  - الحفاظ على معلمات استدعاء أداة Bedrock من خلال إزالة القيمة الافتراضية الصحيحة
  - تنظيف مخططات الأدوات لوضع صارم
  - إصلاح اختبار تسلسل تضمين MemoryRecord

  ### الوثائق
  - تنظيف لغة A2A الخاصة بالمؤسسات
  - إضافة وثائق ميزات A2A الخاصة بالمؤسسات
  - تحديث وثائق A2A الخاصة بالمصادر المفتوحة
  - تحديث سجل التغييرات والإصدار لـ v1.14.2a2

  ## المساهمون

  @Yanhu007, @greysonlalonde

</Update>

<Update label="10 أبريل 2026">
  ## v1.14.2a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.2a2)

  ## ما الذي تغير

  ### الميزات
  - إضافة واجهة مستخدم نصية لنقطة التحقق مع عرض شجري، ودعم التفرع، ومدخلات/مخرجات قابلة للتعديل
  - إثراء تتبع رموز LLM مع رموز الاستدلال ورموز إنشاء التخزين المؤقت
  - إضافة معلمة `from_checkpoint` إلى طرق الانطلاق
  - تضمين `crewai_version` في نقاط التحقق مع إطار عمل الهجرة
  - إضافة تفرع نقاط التحقق مع تتبع السلالة

  ### إصلاحات الأخطاء
  - إصلاح توجيه الوضع الصارم إلى مزودي Anthropic وBedrock
  - تعزيز NL2SQLTool مع وضع القراءة فقط الافتراضي، والتحقق من الاستعلامات، والاستعلامات المعلمة

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.2a1

  ## المساهمون

  @alex-clawd, @github-actions[bot], @greysonlalonde, @lucasgomide

</Update>

<Update label="9 أبريل 2026">
  ## v1.14.2a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.2a1)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح إصدار حدث flow_finished بعد استئناف HITL
  - إصلاح إصدار التشفير إلى 46.0.7 لمعالجة CVE-2026-39892

  ### إعادة هيكلة
  - إعادة هيكلة لاستخدام I18N_DEFAULT المشترك

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.1

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="9 أبريل 2026">
  ## v1.14.1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.1)

  ## ما الذي تغير

  ### الميزات
  - إضافة متصفح TUI لنقاط التفتيش غير المتزامنة
  - إضافة دالة aclose()/close() ومدير سياق غير متزامن لمخرجات البث

  ### إصلاحات الأخطاء
  - إصلاح التعبير النمطي لزيادة إصدار pyproject.toml
  - تنظيف أسماء الأدوات في مرشحات زخرفة الخطاف
  - إصلاح تسجيل معالجات نقاط التفتيش عند إنشاء CheckpointConfig
  - رفع إصدار transformers إلى 5.5.0 لحل CVE-2026-1839
  - إزالة غلاف FilteredStream لـ stdout/stderr

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.1rc1

  ### إعادة الهيكلة
  - استبدال القائمة المحظورة الثابتة باستبعاد حقل BaseTool الديناميكي في توليد المواصفات
  - استبدال التعبير النمطي بـ tomlkit في واجهة سطر أوامر أدوات التطوير
  - استخدام كائن PRINTER المشترك
  - جعل BaseProvider نموذجاً أساسياً مع مميز نوع المزود

  ## المساهمون

  @greysonlalonde, @iris-clawd, @joaomdmoura, @lorenzejay

</Update>

<Update label="9 أبريل 2026">
  ## v1.14.1rc1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.1rc1)

  ## ما الذي تغير

  ### الميزات
  - إضافة متصفح TUI لنقطة التحقق غير المتزامنة
  - إضافة aclose()/close() ومدير سياق غير متزامن لمخرجات البث

  ### إصلاحات الأخطاء
  - إصلاح زيادة إصدارات pyproject.toml باستخدام التعبيرات العادية
  - تنظيف أسماء الأدوات في مرشحات ديكور المكونات
  - زيادة إصدار transformers إلى 5.5.0 لحل CVE-2026-1839
  - تسجيل معالجات نقطة التحقق عند إنشاء CheckpointConfig

  ### إعادة الهيكلة
  - استبدال القائمة المحظورة الثابتة باستبعاد حقل BaseTool الديناميكي في توليد المواصفات
  - استبدال التعبيرات العادية بـ tomlkit في واجهة سطر الأوامر devtools
  - استخدام كائن PRINTER المشترك
  - جعل BaseProvider نموذجًا أساسيًا مع مميز نوع المزود
  - إزالة غلاف stdout/stderr لـ FilteredStream
  - إزالة flow/config.py غير المستخدمة

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.0

  ## المساهمون

  @greysonlalonde, @iris-clawd, @joaomdmoura

</Update>

<Update label="7 أبريل 2026">
  ## v1.14.0

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.0)

  ## ما الذي تغير

  ### الميزات
  - إضافة أوامر CLI لقائمة/معلومات نقاط التحقق
  - إضافة guardrail_type و name لتمييز التتبع
  - إضافة SqliteProvider لتخزين نقاط التحقق
  - إضافة CheckpointConfig للتسجيل التلقائي لنقاط التحقق
  - تنفيذ تسجيل حالة وقت التشغيل، نظام الأحداث، وإعادة هيكلة المنفذ

  ### إصلاحات الأخطاء
  - إضافة حماية من SSRF وتجاوز المسار
  - إضافة التحقق من المسار وعنوان URL لأدوات RAG
  - استبعاد متجهات التضمين من تسلسل الذاكرة لتوفير الرموز
  - التأكد من وجود دليل الإخراج قبل الكتابة في قالب التدفق
  - رفع litellm إلى >=1.83.0 لمعالجة CVE-2026-35030
  - إزالة حقل فهرسة SEO الذي يتسبب في عرض الصفحة العربية بشكل غير صحيح

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.0
  - تحديث أدلة البدء السريع والتثبيت لتحسين الوضوح
  - إضافة قسم مزودي التخزين، تصدير JsonProvider
  - إضافة دليل علامة AMP التدريبية

  ### إعادة الهيكلة
  - تنظيف واجهة برمجة تطبيقات نقاط التحقق
  - إزالة CodeInterpreterTool وإهمال معلمات تنفيذ الكود

  ## المساهمون

  @alex-clawd, @github-actions[bot], @greysonlalonde, @iris-clawd, @joaomdmoura, @lorenzejay, @lucasgomide

</Update>

<Update label="7 أبريل 2026">
  ## v1.14.0a4

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.0a4)

  ## ما الذي تغير

  ### الميزات
  - إضافة guardrail_type و name لتمييز الآثار
  - إضافة SqliteProvider لتخزين نقاط التحقق
  - إضافة CheckpointConfig للتخزين التلقائي لنقاط التحقق
  - تنفيذ نقاط التحقق لحالة التشغيل، نظام الأحداث، وإعادة هيكلة المنفذ

  ### إصلاحات الأخطاء
  - استبعاد متجهات التضمين من تسلسل الذاكرة لتوفير الرموز
  - رفع litellm إلى >=1.83.0 لمعالجة CVE-2026-35030

  ### الوثائق
  - تحديث أدلة البدء السريع والتثبيت لتحسين الوضوح
  - إضافة قسم مقدمي التخزين وتصدير JsonProvider

  ### الأداء
  - استخدام JSONB لعمود بيانات نقاط التحقق

  ### إعادة الهيكلة
  - إزالة CodeInterpreterTool وإهمال معلمات تنفيذ الكود

  ## المساهمون

  @alex-clawd, @github-actions[bot], @greysonlalonde, @joaomdmoura, @lorenzejay, @lucasgomide

</Update>

<Update label="6 أبريل 2026">
  ## v1.14.0a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.0a3)

  ## ما الذي تغير

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.14.0a2

  ## المساهمون

  @joaomdmoura

</Update>

<Update label="6 أبريل 2026">
  ## v1.14.0a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.14.0a2)

  # ملاحظات الإصدار 1.14.0a2

  ## التعليمات:
  - ترجم جميع عناوين الأقسام والوصف بشكل طبيعي
  - احتفظ بتنسيق markdown (##، ###، -، إلخ) كما هو
  - احتفظ بجميع الأسماء الصحيحة، ومعرفات الشيفرة، وأسماء الفئات، والمصطلحات التقنية دون تغيير
    (مثل "CrewAI"، "LiteAgent"، "ChromaDB"، "MCP"، "@username")
  - احتفظ بقسم ## المساهمون وأسماء مستخدمي GitHub كما هي
  - لا تضف أو تزيل أي محتوى، فقط ترجم

  ## المميزات الجديدة
  - تمت إضافة دعم لـ "ChromaDB" لتحسين أداء قاعدة البيانات.
  - تحسينات على "LiteAgent" لزيادة الكفاءة.

  ## الإصلاحات
  - إصلاح مشكلة تتعلق بـ "MCP" التي كانت تؤدي إلى تعطل التطبيق.
  - معالجة الأخطاء المتعلقة بواجهة المستخدم في "CrewAI".

  ## المساهمون
  - @username1
  - @username2
  - @username3

</Update>

<Update label="2 أبريل 2026">
  ## v1.13.0

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0)

  ## ما الذي تغير

  ### الميزات
  - إضافة نموذج RuntimeState RootModel لتوحيد تسلسل الحالة
  - تعزيز مستمع الأحداث مع نطاقات جديدة للقياس عن أحداث المهارة والذاكرة
  - إضافة امتداد A2UI مع دعم v0.8/v0.9، والمخططات، والوثائق
  - إصدار بيانات استخدام الرموز في حدث LLMCallCompletedEvent
  - تحديث تلقائي لمستودع اختبار النشر أثناء الإصدار
  - تحسين مرونة الإصدار المؤسسي وتجربة المستخدم

  ### إصلاحات الأخطاء
  - إضافة بيانات اعتماد مستودع الأدوات إلى تثبيت crewai
  - إضافة بيانات اعتماد مستودع الأدوات إلى بناء uv في نشر الأدوات
  - تمرير بيانات التعريف عبر الإعدادات بدلاً من معلمات الأدوات
  - معالجة نماذج GPT-5.x التي لا تدعم معلمة API `stop`
  - إضافة GPT-5 وسلسلة o إلى بادئات الرؤية متعددة الوسائط
  - مسح ذاكرة التخزين المؤقت uv للحزم التي تم نشرها حديثًا في الإصدار المؤسسي
  - تحديد lancedb أقل من 0.30.1 لضمان التوافق مع Windows
  - إصلاح مستويات أذونات RBAC لتتناسب مع خيارات واجهة المستخدم الفعلية
  - إصلاح عدم الدقة في قدرات الوكيل عبر جميع اللغات

  ### الوثائق
  - إضافة فيديو توضيحي لمهارات وكيل البرمجة إلى صفحات البدء
  - إضافة دليل شامل لتكوين SSO
  - إضافة مصفوفة شاملة لأذونات RBAC ودليل النشر
  - تحديث سجل التغييرات والإصدار إلى v1.13.0

  ### الأداء
  - تقليل الحمل الزائد للإطار باستخدام حافلة الأحداث الكسولة، وتخطي التتبع عند تعطيله

  ### إعادة الهيكلة
  - تحويل Flow إلى Pydantic BaseModel
  - تحويل فئات LLM إلى Pydantic BaseModel
  - استبدال InstanceOf[T] بتعليقات نوع عادية
  - إزالة دليل LLM الخاص بالطرف الثالث غير المستخدم

  ## المساهمون

  @alex-clawd, @dependabot[bot], @greysonlalonde, @iris-clawd, @joaomdmoura, @lorenzejay, @lucasgomide, @thiagomoretto

</Update>

<Update label="2 أبريل 2026">
  ## v1.13.0a7

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0a7)

  ## ما الذي تغير

  ### الميزات
  - إضافة امتداد A2UI مع دعم v0.8/v0.9، والمخططات، والوثائق

  ### إصلاحات الأخطاء
  - إصلاح بادئات الرؤية متعددة الأنماط عن طريق إضافة GPT-5 وسلسلة o

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.13.0a6

  ## المساهمون

  @alex-clawd, @greysonlalonde, @joaomdmoura

</Update>

<Update label="1 أبريل 2026">
  ## v1.13.0a6

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0a6)

  ## ما الذي تغير

  ### الوثائق
  - إصلاح مستويات أذونات RBAC لتتوافق مع خيارات واجهة المستخدم الفعلية (#5210)
  - تحديث سجل التغييرات والإصدار لـ v1.13.0a5 (#5200)

  ### الأداء
  - تقليل عبء العمل على الإطار من خلال تنفيذ حافلة أحداث كسولة وتجاوز التتبع عند تعطيله (#5187)

  ## المساهمون

  @alex-clawd, @joaomdmoura, @lucasgomide

</Update>

<Update label="31 مارس 2026">
  ## v1.13.0a5

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0a5)

  ## ما الذي تغير

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.13.0a4

  ## المساهمون

  @greysonlalonde, @joaomdmoura

</Update>

<Update label="1 أبريل 2026">
  ## v1.13.0a4

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0a4)

  ## ما الذي تغير

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.13.0a3

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="1 أبريل 2026">
  ## v1.13.0a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0a3)

  ## ما الذي تغير

  ### الميزات
  - إصدار بيانات استخدام الرمز في LLMCallCompletedEvent
  - استخراج ونشر بيانات الأداة إلى AMP

  ### إصلاح الأخطاء
  - التعامل مع نماذج GPT-5.x التي لا تدعم معلمة API `stop`

  ### الوثائق
  - إصلاح عدم الدقة في قدرات الوكيل عبر جميع اللغات
  - إضافة نظرة عامة على قدرات الوكيل وتحسين وثائق المهارات
  - إضافة دليل شامل لتكوين SSO
  - تحديث سجل التغييرات والإصدار لـ v1.13.0rc1

  ### إعادة الهيكلة
  - تحويل Flow إلى Pydantic BaseModel
  - تحويل فئات LLM إلى Pydantic BaseModel
  - استبدال InstanceOf[T] بتعليقات نوع عادية
  - إزالة الطرق غير المستخدمة

  ## المساهمون

  @dependabot[bot], @greysonlalonde, @iris-clawd, @lorenzejay, @lucasgomide, @thiagomoretto

</Update>

<Update label="27 مارس 2026">
  ## v1.13.0rc1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0rc1)

  ## ما الذي تغير

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.13.0a2

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="27 مارس 2026">
  ## v1.13.0a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0a2)

  ## ما الذي تغير

  ### الميزات
  - تحديث تلقائي لمستودع اختبار النشر أثناء الإصدار
  - تحسين مرونة إصدار المؤسسات وتجربة المستخدم

  ### الوثائق
  - تحديث سجل التغييرات والإصدار للإصدار v1.13.0a1

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="27 مارس 2026">
  ## v1.13.0a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.13.0a1)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح الروابط المعطلة في سير العمل الوثائقي عن طريق تثبيت Node على LTS 22
  - مسح ذاكرة التخزين المؤقت لـ uv للحزم المنشورة حديثًا في الإصدار المؤسسي

  ### الوثائق
  - إضافة مصفوفة شاملة لأذونات RBAC ودليل النشر
  - تحديث سجل التغييرات والإصدار للإصدار v1.12.2

  ## المساهمون

  @greysonlalonde, @iris-clawd, @joaomdmoura

</Update>

<Update label="25 مارس 2026">
  ## v1.12.2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.12.2)

  ## ما الذي تغير

  ### الميزات
  - إضافة مرحلة إصدار المؤسسات إلى إصدار أدوات المطورين

  ### إصلاحات الأخطاء
  - الحفاظ على قيمة إرجاع الطريقة كإخراج تدفق لـ @human_feedback مع emit

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.12.1
  - مراجعة سياسة الأمان وتعليمات الإبلاغ

  ## المساهمون

  @alex-clawd, @greysonlalonde, @joaomdmoura, @theCyberTech

</Update>

<Update label="25 مارس 2026">
  ## v1.12.1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.12.1)

  ## ما الذي تغير

  ### الميزات
  - إضافة request_id إلى HumanFeedbackRequestedEvent
  - إضافة Qdrant Edge كخلفية تخزين لنظام الذاكرة
  - إضافة أمر docs-check لتحليل التغييرات وتوليد الوثائق مع الترجمات
  - إضافة دعم اللغة العربية إلى سجل التغييرات وأدوات الإصدار
  - إضافة ترجمة باللغة العربية الفصحى لجميع الوثائق
  - إضافة أمر تسجيل الخروج في واجهة سطر الأوامر
  - إضافة مهارات الوكيل
  - تنفيذ root_scope تلقائيًا لعزل الذاكرة الهيكلية
  - تنفيذ مزودين متوافقين مع OpenAI (OpenRouter، DeepSeek، Ollama، vLLM، Cerebras، Dashscope)

  ### إصلاحات الأخطاء
  - إصلاح بيانات اعتماد غير صحيحة لدفع دفعات التتبع (404)
  - حل العديد من الأخطاء في نظام تدفق HITL
  - إصلاح حفظ ذاكرة الوكيل
  - حل جميع أخطاء mypy الصارمة عبر حزمة crewai
  - إصلاح استخدام __router_paths__ لطرق المستمع + الموجه في FlowMeta
  - إصلاح خطأ القيمة عند عدم دعم الملفات
  - تصحيح صياغة الحجر الصحي لـ litellm في الوثائق
  - إصلاح جميع أخطاء mypy في crewai-files وإضافة جميع الحزم إلى فحوصات النوع في CI
  - تثبيت الحد الأعلى لـ litellm على آخر إصدار تم اختباره (1.82.6)

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.12.0
  - إضافة CONTRIBUTING.md
  - إضافة دليل لاستخدام CrewAI بدون LiteLLM

  ## المساهمون

  @akaKuruma، @alex-clawd، @greysonlalonde، @iris-clawd، @joaomdmoura، @lorenzejay، @lucasgomide، @nicoferdi96

</Update>

<Update label="25 مارس 2026">
  ## v1.12.0

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.12.0)

  ## ما الذي تغير

  ### الميزات
  - إضافة واجهة تخزين Qdrant Edge لنظام الذاكرة
  - إضافة أمر docs-check لتحليل التغييرات وتوليد الوثائق مع الترجمات
  - إضافة دعم اللغة العربية لسجل التغييرات وأدوات الإصدار
  - إضافة ترجمة اللغة العربية الفصحى لجميع الوثائق
  - إضافة أمر تسجيل الخروج في واجهة سطر الأوامر
  - تنفيذ مهارات الوكيل
  - تنفيذ نطاق الجذر التلقائي لعزل الذاكرة الهرمية
  - تنفيذ موفري خدمات متوافقين مع OpenAI (OpenRouter، DeepSeek، Ollama، vLLM، Cerebras، Dashscope)

  ### إصلاح الأخطاء
  - إصلاح بيانات الاعتماد السيئة لدفع دفعات التتبع (404)
  - حل العديد من الأخطاء في نظام تدفق HITL
  - حل أخطاء mypy في crewai-files وإضافة جميع الحزم إلى فحوصات نوع CI
  - حل جميع أخطاء mypy الصارمة عبر حزمة crewai-tools
  - حل جميع أخطاء mypy عبر حزمة crewai
  - إصلاح حفظ الذاكرة في الوكيل
  - إصلاح استخدام __router_paths__ لطرق المستمع + الموجه في FlowMeta
  - رفع خطأ القيمة عند عدم دعم الملفات
  - تصحيح صياغة الحجر الصحي لـ litellm في الوثائق
  - استخدام فحص None بدلاً من isinstance للذاكرة في تعلم التغذية الراجعة البشرية
  - تثبيت الحد الأعلى لـ litellm على آخر إصدار تم اختباره (1.82.6)

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.12.0
  - إضافة CONTRIBUTING.md
  - إضافة دليل لاستخدام CrewAI بدون LiteLLM

  ### إعادة الهيكلة
  - إعادة هيكلة لتجنب تكرار تنفيذ المهام المتزامنة / غير المتزامنة وبدء التشغيل في الوكيل
  - تبسيط الأنابيب الداخلية من litellm (عد الرموز، ردود النداء، اكتشاف الميزات، الأخطاء)

  ## المساهمون

  @akaKuruma، @alex-clawd، @greysonlalonde، @iris-clawd، @joaomdmoura، @lorenzejay، @nicoferdi96

</Update>

<Update label="26 مارس 2026">
  ## v1.12.0a3

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.12.0a3)

  ## ما الذي تغير

  ### إصلاحات الأخطاء
  - إصلاح بيانات الاعتماد الخاطئة لدفع دفعات التتبع (404)
  - حل العديد من الأخطاء في نظام تدفق HITL

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.12.0a2

  ## المساهمون

  @akaKuruma, @greysonlalonde

</Update>

<Update label="25 مارس 2026">
  ## v1.12.0a2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.12.0a2)

  ## ما الذي تغير

  ### الميزات
  - إضافة واجهة تخزين Qdrant Edge لنظام الذاكرة

  ### الوثائق
  - تحديث سجل التغييرات والإصدار لـ v1.12.0a1

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="25 مارس 2026">
  ## v1.12.0a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.12.0a1)

  ## ما الذي تغير

  ### الميزات
  - إضافة أمر docs-check لتحليل التغييرات وتوليد الوثائق مع الترجمات
  - إضافة دعم اللغة العربية لسجل التغييرات وأدوات الإصدار
  - إضافة ترجمة اللغة العربية الفصحى لجميع الوثائق
  - إضافة مزودي خدمات متوافقين مع OpenAI (OpenRouter، DeepSeek، Ollama، vLLM، Cerebras، Dashscope)
  - إضافة مهارات الوكيل
  - إضافة أمر تسجيل الخروج في واجهة سطر الأوامر
  - تنفيذ نطاق الجذر التلقائي لعزل الذاكرة الهيكلية

  ### إصلاح الأخطاء
  - إصلاح حفظ ذاكرة الوكيل
  - حل أخطاء mypy في crewai-files وإضافة جميع الحزم إلى فحوصات نوع CI
  - حل جميع أخطاء mypy الصارمة عبر حزمة crewai-tools
  - حل جميع أخطاء mypy عبر حزمة crewai
  - إصلاح استخدام __router_paths__ لطرق المستمع + الموجه في FlowMeta
  - تثبيت الحد الأعلى لـ litellm على آخر إصدار تم اختباره (1.82.6)
  - رفع خطأ القيمة عند عدم دعم الملفات
  - تصحيح صياغة الحجر الصحي لـ litellm في الوثائق

  ### الوثائق
  - إضافة CONTRIBUTING.md
  - إضافة دليل لاستخدام CrewAI بدون LiteLLM
  - تحديث سجل التغييرات والإصدار لـ v1.11.1

  ### إعادة الهيكلة
  - إعادة هيكلة لإزالة التكرار في تنفيذ المهام المتزامنة وغير المتزامنة وبدء التشغيل في الوكيل
  - فصل الأنابيب الداخلية عن litellm (عد الرموز، ردود الفعل، اكتشاف الميزات، الأخطاء)

  ## المساهمون

  @alex-clawd، @greysonlalonde، @iris-clawd، @lorenzejay، @nicoferdi96

</Update>

<Update label="Mar 23, 2026">
  ## v1.11.1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.11.1)

  ## ما تغيّر

  ### الميزات
  - إضافة مُسلسِل flow_structure() لفحص فئة Flow.

  ### إصلاحات الأخطاء
  - إصلاح ثغرات أمنية بتحديث pypdf و tinytag و langchain-core.
  - الحفاظ على تهيئة LLM الكاملة عبر استئناف HITL لمزودي غير OpenAI.
  - منع اجتياز المسار في FileWriterTool.
  - إصلاح انهيار lock_store عندما لا تكون حزمة redis مثبتة.
  - تمرير cache_function من BaseTool إلى CrewStructuredTool.

  ### التوثيق
  - إضافة دليل نشر الأدوات المخصصة مع الترجمات.
  - تحديث سجل التغييرات والإصدار لـ v1.11.0.
  - إضافة توثيق مستمعي الأحداث المفقود.

  ### إعادة الهيكلة
  - استبدال urllib بـ requests في محمّل PDF.
  - استبدال حقول callback والنموذج من نوع Any بأنواع قابلة للتسلسل.

  ## المساهمون

  @alex-clawd, @danielfsbarreto, @dependabot[bot], @greysonlalonde, @lorenzejay, @lucasgomide, @mattatcha, @theCyberTech, @vinibrsl

</Update>

<Update label="Mar 18, 2026">
  ## v1.11.0

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.11.0)

  ## ما تغيّر

  ### التوثيق
  - تحديث سجل التغييرات والإصدار لـ v1.11.0rc2

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="Mar 17, 2026">
  ## v1.11.0rc2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.11.0rc2)

  ## ما تغيّر

  ### إصلاحات الأخطاء
  - تحسين معالجة استجابات LLM والتسلسل.
  - ترقية الاعتماديات الانتقالية المعرضة للخطر (authlib، PyJWT، snowflake-connector-python).
  - استبدال `os.system` بـ `subprocess.run` في تثبيت pip بالوضع غير الآمن.

  ### التوثيق
  - تحديث صفحة أداة Exa Search بتسمية ووصف وخيارات تهيئة محسّنة.
  - إضافة خوادم MCP المخصصة في دليل الإرشادات.
  - تحديث توثيق جامعي OTEL.
  - تحديث توثيق MCP.
  - تحديث سجل التغييرات والإصدار لـ v1.11.0rc1.

  ## المساهمون

  @10ishq, @greysonlalonde, @joaomdmoura, @lucasgomide, @mattatcha, @theCyberTech, @vinibrsl

</Update>

<Update label="Mar 15, 2026">
  ## v1.11.0rc1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.11.0rc1)

  ## ما تغيّر

  ### الميزات
  - إضافة مصادقة رمز Plus API في a2a
  - تنفيذ نمط التخطيط والتنفيذ

  ### إصلاحات الأخطاء
  - حل مشكلة هروب صندوق حماية مفسر الكود

  ### التوثيق
  - تحديث سجل التغييرات والإصدار لـ v1.10.2rc2

  ## المساهمون

  @Copilot, @greysonlalonde, @lorenzejay, @theCyberTech

</Update>

<Update label="Mar 14, 2026">
  ## v1.10.2rc2

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.10.2rc2)

  ## ما تغيّر

  ### إصلاحات الأخطاء
  - إزالة الأقفال الحصرية من عمليات التخزين للقراءة فقط

  ### التوثيق
  - تحديث سجل التغييرات والإصدار لـ v1.10.2rc1

  ## المساهمون

  @greysonlalonde

</Update>

<Update label="Mar 13, 2026">
  ## v1.10.2rc1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.10.2rc1)

  ## ما تغيّر

  ### الميزات
  - إضافة أمر الإصدار وتشغيل نشر PyPI

  ### إصلاحات الأخطاء
  - إصلاح القفل الآمن عبر العمليات والخيوط للإدخال/الإخراج غير المحمي
  - نشر contextvars عبر جميع حدود الخيوط والمنفذين
  - نشر ContextVars إلى خيوط المهام غير المتزامنة

  ### التوثيق
  - تحديث سجل التغييرات والإصدار لـ v1.10.2a1

  ## المساهمون

  @danglies007, @greysonlalonde

</Update>

<Update label="Mar 11, 2026">
  ## v1.10.2a1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.10.2a1)

  ## ما تغيّر

  ### الميزات
  - إضافة دعم البحث عن الأدوات وتوفير الرموز وحقن الأدوات المناسبة ديناميكيًا أثناء التنفيذ لـ Anthropic.
  - تقديم المزيد من أدوات Brave Search.
  - إنشاء إجراء للإصدارات الليلية.

  ### إصلاحات الأخطاء
  - إصلاح LockException تحت التنفيذ المتزامن متعدد العمليات.
  - حل مشكلات تجميع نتائج الأدوات المتوازية في رسالة مستخدم واحدة.
  - معالجة حلول أدوات MCP والقضاء على جميع الاتصالات المشتركة القابلة للتغيير.
  - تحديث معالجة معاملات LLM في دالة human_feedback.
  - إضافة طرق list/dict المفقودة إلى LockedListProxy و LockedDictProxy.
  - نشر سياق contextvars إلى خيوط استدعاء الأدوات المتوازية.
  - ترقية اعتمادية gitpython إلى >=3.1.41 لحل ثغرة اجتياز مسار CVE.

  ### إعادة الهيكلة
  - إعادة هيكلة فئات الذاكرة لتكون قابلة للتسلسل.

  ### التوثيق
  - تحديث سجل التغييرات والإصدار لـ v1.10.1.

  ## المساهمون

  @akaKuruma, @github-actions[bot], @giulio-leone, @greysonlalonde, @joaomdmoura, @jonathansampson, @lorenzejay, @lucasgomide, @mattatcha

</Update>

<Update label="Mar 04, 2026">
  ## v1.10.1

  [عرض الإصدار على GitHub](https://github.com/crewAIInc/crewAI/releases/tag/1.10.1)

  ## ما تغيّر

  ### الميزات
  - ترقية Gemini GenAI

  ### إصلاحات الأخطاء
  - ضبط قيمة مستمع المنفذ لتجنب التكرار
  - تجميع أجزاء استجابة الدوال المتوازية في كائن Content واحد في Gemini
  - إظهار مخرجات التفكير من نماذج التفكير في Gemini
  - تحميل أدوات MCP والمنصة عندما تكون أدوات الوكيل None
  - دعم بيئات Jupyter مع حلقات أحداث قيد التشغيل في A2A
  - استخدام معرّف مجهول للتتبعات المؤقتة
  - تمرير ترويسة plus بشكل مشروط
  - تخطي تسجيل معالج الإشارة في الخيوط غير الرئيسية لقياس الأداء عن بعد
  - حقن أخطاء الأدوات كملاحظات وحل تعارضات الأسماء
  - ترقية pypdf من 4.x إلى 6.7.4 لحل تنبيهات Dependabot
  - حل تنبيهات أمان Dependabot الحرجة والعالية

  ### التوثيق
  - تحديث توثيق بث webhook
  - ضبط لغة التوثيق من AOP إلى AMP

  ### المساهمون
  @Vidit-Ostwal, @greysonlalonde, @heitorado, @joaomdmoura, @lorenzejay, @lucasgomide, @mplachta

</Update>
